# ymlog

./: Cargo.toml  README.md
src/: formatter.rs  lib.rs  logger.rs  macros.rs  message.rs
tests/: test_macros.rs
