[package]
name = "ymlog"
version = "0.1.0" # remember to update html_root_url
authors = ["Dave Fogelson <theprocessfoundry.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A Streaming YAML logger"
repository = "https://github.com/the_process_foundry/allwhat"
documentation = "https://github.com/the_process_foundry/allwhat"
readme = "README.md"
categories = ["rust-patterns", "development-tools::debugging" ]
keywords = ["logging", "yaml", "yml"]


[dependencies]
# Make a module level variable if needed
lazy_static = "1.4.0"

# Basic Logging
log = "0.4.14"

#-- These are going to move to their own project when I get the chance
# Logger serialization
serde = { version = "1.0.130", features = ["derive"] }
serde_yaml = "0.8.21"

# DateTime
chrono = { version = "0.4.19", features = ["serde"] }

# a contextual logging framework
slog = "2.7.0"
slog-term = "2.8.0"
slog-async = "2.7.0"
# slog-scope = "4.4.0"